# sfml-template

./: .gitignore  CMakeLists.txt  LICENSE  Player.cpp  Player.hpp  README.md  build.py  test.settings
include/: Core.hpp  ResourcesHandler.hpp  RessourcesHandler.hpp  Scene.hpp  Settings.hpp  Tile.hpp
include/components/: Animation.hpp  Button.hpp  RangePicker.hpp  RoundedRectangleShape.hpp  SoundEffect.hpp  Switch.hpp  TextAnimation.hpp  TextButton.hpp  TextDropdown.hpp  TextInput.hpp  TextMenu.hpp
include/interfaces/: Clickable.hpp
include/scenes/: Game.hpp  GameScene.hpp  Menu.hpp  MenuScene.hpp  Options.hpp  OptionsScene.hpp
src/: Core.cpp  ResourcesHandler.cpp  RessourcesHandler.cpp  Scene.cpp  Settings.cpp  main.cpp
src/components/: Animation.cpp  Button.cpp  RangePicker.cpp  RoundedRectangleShape.cpp  SoundEffect.cpp  Switch.cpp  TextAnimation.cpp  TextButton.cpp  TextDropdown.cpp  TextInput.cpp  TextMenu.cpp
src/interfaces/: Clickable.cpp
src/scenes/: Game.cpp  GameScene.cpp  Menu.cpp  MenuScene.cpp  Options.cpp  OptionsScene.cpp
